--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>立式气液分离器选型计算器</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
     <div class="container">
@@ -123,7 +123,7 @@
         </main>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="/src/script.js"></script>
 </body>
 </html>
 
