Fix Vite import error: load CoolProp as global script
- Remove ES6 import of coolprop.js from public directory
- Load coolprop.js as global script in HTML
- Access Module via global variable instead of import
- Add waitForModule function to ensure Module is loaded

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
         </main>
     </div>
 
+    <!-- 先加载 CoolProp 库（作为全局脚本） -->
+    <script src="/coolprop.js"></script>
+    <!-- 然后加载应用代码 -->
     <script type="module" src="/src/script.js"></script>
 </body>
 </html>
