--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
         </main>
     </div>
 
-    <!-- 先加载 CoolProp 库（作为全局脚本） -->
-    <script src="/coolprop.js"></script>
-    <!-- 然后加载应用代码 -->
+    <!-- 加载应用代码 -->
     <script type="module" src="/src/script.js"></script>
 </body>
 </html>
