Add separator diagram image to interface
- Add diagram section below header
- Display vertical separator structure diagram
- Add responsive styling for diagram display
- Include image caption

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
             <p class="subtitle">Vertical Suction Accumulator Sizing Calculator</p>
         </header>
 
+        <!-- 气液分离器示意图 -->
+        <section class="diagram-section">
+            <div class="diagram-container">
+                <img 
+                    src="https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcT-yxP-vVbsG-Sk1GQ6O2WYODWIw94D1RWfOw2pItIquJKHkNeoe-Wc_cngDOgoXfuP2YbSNUFNWIerYUOzwn7cAVystGpG_jBvKNIsf-5tzA3r7UU" 
+                    alt="立式气液分离器结构示意图" 
+                    class="separator-diagram"
+                    loading="lazy"
+                />
+                <p class="diagram-caption">立式气液分离器结构示意图</p>
+            </div>
+        </section>
+
         <main class="main-content">
             <!-- 左侧：参数输入区 -->
             <section class="input-section">
