增加卧式气分图形

--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
 
         <!-- 卧式气液分离器内容 -->
         <div id="horizontalContent" class="separator-content" style="display: none;">
+            <!-- 气液分离器示意图 -->
+            <section class="diagram-section">
+                <div class="diagram-container">
+                    <img 
+                        src="/horizontal-separator-diagram.png" 
+                        alt="卧式气液分离器结构示意图" 
+                        class="separator-diagram"
+                        loading="lazy"
+                        onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"
+                    />
+                    <div style="display: none; padding: 20px; text-align: center; color: #66757f;">
+                        <p>请将卧式气液分离器结构示意图放置在 <code>public/horizontal-separator-diagram.png</code></p>
+                    </div>
+                    <p class="diagram-caption">卧式气液分离器结构示意图</p>
+                </div>
+            </section>
+
             <main class="main-content">
                 <!-- 左侧：参数输入区 -->
                 <section class="input-section">
