--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
                         <span class="result-value" id="gasViscosity">-</span>
                         <span class="result-unit">Pa·s</span>
                     </div>
+                    <div class="result-item">
+                        <span class="result-label">液体停留时间</span>
+                        <span class="result-value" id="residenceTime">-</span>
+                        <span class="result-unit">s</span>
+                    </div>
                 </div>
                 
                 <!-- 结论与建议部分 -->
@@ -589,6 +594,11 @@
                             <span class="result-label">最小流通面积</span>
                             <span class="result-value" id="minArea">-</span>
                             <span class="result-unit">m²</span>
+                        </div>
+                        <div class="result-item">
+                            <span class="result-label">液体停留时间</span>
+                            <span class="result-value" id="residenceTimeSteam">-</span>
+                            <span class="result-unit">s</span>
                         </div>
                     </div>
                     
