修正Vre与移动端显示问题

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             <option value="R290">R290 (Propane)</option>
                             <option value="R600a">R600a (Isobutane)</option>
                             <option value="R410A">R410A (HFC-410A)</option>
+                            <option value="R744">R744 (CO₂, 二氧化碳)</option>
                         </optgroup>
                         <optgroup label="高温制冷剂 (蒸发温度 > 10°C)">
                             <option value="R245fa">R245fa (HFC-245fa)</option>
@@ -249,6 +250,7 @@
                                 <option value="R290">R290 (Propane)</option>
                                 <option value="R600a">R600a (Isobutane)</option>
                                 <option value="R410A">R410A (HFC-410A)</option>
+                                <option value="R744">R744 (CO₂, 二氧化碳)</option>
                             </optgroup>
                             <optgroup label="高温制冷剂 (蒸发温度 > 10°C)">
                                 <option value="R245fa">R245fa (HFC-245fa)</option>
